--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
 	<title>Demo</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
 
-	<h1>Sean Morrison Home Page</h1>
-	<p>Hello people who are visiting. Building out my first page. Thanks for visiting and keep checking back for more fun and excitement.</p>
+<div class="container-fluid">
+	<div class="jumbotron">
+	<h1 class="display-3">Sean Morrison</h1>
+	<p class="lead">Hello people who are visiting. Building out my first page. Thanks for visiting and keep checking back for more fun and excitement.</p>
+	<hr class="my-4">
+	<p>I am currently learning HTML5, CSS3, JavaScript and more. Mainly front-end Web Development for now and hopefully more in the near future.</p>
+	<p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
+</div>
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
