--- a/resume.html
+++ b/resume.html
@@ -1,86 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Demo</title>
+	<title>Resume of Sean Morrison, IT Administrator and Web Developer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 
-	Sean Morrison
-	San Jose, CA
-	linkedin.com/in/theseanmorrison
+<div class="container">
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
 
-	IT Administrator
-	Improve Business Operations through Creative Application of Technology and Resourceful, Service-minded Support
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html"><i class="fas fa-thumbs-up"></i></a>
+			</div>
 
-	System Administrator and IT Support Specialist. Expertise includes IT administration, desktop support, web development and troubleshooting. Detail focused and trusted with providing technical support to all employees for all systems, network and web related items. Self-starter, creative thinker, decisive, organized and excellent communicator.
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+					<li><a href="#"><i class="fas fa-coffee"></i></a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="https://www.linkedin.com/in/theseanmorrison/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+					<li><a href="https://www.facebook.com/seanmorrison" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href="https://twitter.com/SeanMorrison" target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://www.instagram.com/morrisonsean/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
+	<div class="jumbotron">
 
-	Technical Skills
-	Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
+		<div class="container">
+			<h1>Sean Morrison</h1>
+			<p>San Jose, CA</p>
+		</div>
 
-	Professional Experience
-	STANDARD FIBER, Burlingame, CA	April 2017 - Present
-	Infrastructure Support Specialist
-	Provide general IT support and Helpdesk for global textile business.
-	<ul>
-		<li>
-			Support systems/network infrastructure including: Windows and Mac, Office 365, Microsoft Exchange, SharePoint Online, Windows Server, printers, remote access, VPN, iOS, Android, LifeSize Cloud and Skype for Business Telepresence, JIRA ticket tracking, software and hardware.
-		</li>
-	</ul>
+		<div class="container">
+			<h2>IT Administrator</h2>
+			<h3>Improve Business Operations through Creative Application of Technology and Resourceful, Service-minded Support</h3>
+			<p>
+				System Administrator and IT Support Specialist. Expertise includes IT administration, desktop support, web development and troubleshooting. Detail focused and trusted with providing technical support to all employees for all systems, network and web related items. Self-starter, creative thinker, decisive, organized and excellent communicator.
+			</p>
+		</div>
 
-	S3C INC, Sunnyvale, CA	July 2005 – March 2017
-	Senior System Administrator
-	Hired as 5th employee as Senior System Administrator at new startup. Designed, built, and administered mixed-server, multi-user, computer infrastructure (Windows / Linux). Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
+		<h3>Technical Skills</h3>
+		<p>
+			Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
+		</p>
 
-	<ul>
-		<li>
-			Created Windows Server 2012 R2 Active Directory domain controller infrastructure, providing services, including file sharing, backups, security, remote access, and printing, with 99% uptime.
-		</li>
-		<li>
-			Administered various IT business systems and services such as domain hosting, email, cloud storage, and VPN remote access, enabling increased employee productivity.
-		</li>
-		<li>
-			Designed and developed an improved, modernized company website with more information and social media presence, offering potential clients greater knowledge of company products and services.
-		</li>
-		<li>
-			Photographed and edited photos of business products in Photoshop for use in engineering documents and marketing vehicles including social media and company web site, educating customers and eliminating operational cost of separate marketing department.
-		</li>
-		<li>
-			Enhanced disaster recovery plan and performance through weekly upload of engineering data archive to Google Cloud Platform Storage using Python commands.
-		</li>
-		<li>
-			Installed 5 workstation Red Hat Enterprise Linux network to run Cadence software for ASIC engineering design and layout.
-		</li>
-		<li>
-			Trained employees monthly in multiple areas including network security and system operations, contributing to strong security awareness and no malware related disasters.
-		</li>
-		<li>
-			Reduced software costs by $10k by upgrading all Windows computers to Version 10 during free upgrade period.
-		</li>
-	</ul>
+		<h3>Professional Experience</h3>
+			<h4>Standard Fiber</h4>
+			<ul>
+				<li>Burlingame, CA</li>
+				<li>April 2017 - Present</li>
+				<li>Infrastructure Support Specialist</li>
+				<li>Provide general IT support and Helpdesk for global textile business.</li>
+				<li>
+					Support systems/network infrastructure including: Windows and Mac, Office 365, Microsoft Exchange, SharePoint Online, Windows Server, printers, remote access, VPN, iOS, Android, LifeSize Cloud and Skype for Business Telepresence, JIRA ticket tracking, software and hardware.
+				</li>
+			</ul>
 
-	Additional Related Experience
-	SANDIS HUMBER JONES, Mountain View, CA	July 2003 – June 2005
-	System Administrator (Systems Administration of Windows XP & Server 2003)
+			<h4>S3C, Inc.</h4>
+			<ul>
+				<li>Sunnyvale, CA</li>
+				<li>July 2005 – March 2017</li>
+				<li>Senior System Administrator</li>
+				<li>
+					Hired as 5th employee as Senior System Administrator at new startup. Designed, built, and administered mixed-server, multi-user, computer infrastructure (Windows / Linux). Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
+				</li>
+				<li>
+					Created Windows Server 2012 R2 Active Directory domain controller infrastructure, providing services, including file sharing, backups, security, remote access, and printing, with 99% uptime.
+				</li>
+				<li>
+					Administered various IT business systems and services such as domain hosting, email, cloud storage, and VPN remote access, enabling increased employee productivity.
+				</li>
+				<li>
+					Designed and developed an improved, modernized company website with more information and social media presence, offering potential clients greater knowledge of company products and services.
+				</li>
+				<li>
+					Photographed and edited photos of business products in Photoshop for use in engineering documents and marketing vehicles including social media and company web site, educating customers and eliminating operational cost of separate marketing department.
+				</li>
+				<li>
+					Enhanced disaster recovery plan and performance through weekly upload of engineering data archive to Google Cloud Platform Storage using Python commands.
+				</li>
+				<li>
+					Installed 5 workstation Red Hat Enterprise Linux network to run Cadence software for ASIC engineering design and layout.
+				</li>
+				<li>
+					Trained employees monthly in multiple areas including network security and system operations, contributing to strong security awareness and no malware related disasters.
+				</li>
+				<li>
+					Reduced software costs by $10k by upgrading all Windows computers to Version 10 during free upgrade period.
+				</li>
+			</ul>
 
-	AT&T WIRELESS, Mountain View, CA	February 2002 – June 2003
-	Communications Specialist (Retail sales with mobile carriers of GSM/GPRS mobile hardware)
+		<h3>Additional Related Experience</h3>
+		<h4>Sandis Humber Jones</h4>
+		<ul>
+			<li>Mountain View, CA</li>
+			<li>Mountain View, CA</li>
+			<li>System Administrator (Systems Administration of Windows XP & Server 2003)</li>
+		</ul>
 
-	TEXAS INSTRUMENTS, San Jose, CA	January 1995 – September 2001
-	System Administrator (Systems Administration of Windows 98 & NT 4.0)
+		<h4>AT&T Wireless</h4>
+		<ul>
+			<li>Mountain View, CA</li>
+			<li>February 2002 – June 2003</li>
+			<li>Communications Specialist (Retail sales with mobile carriers of GSM/GPRS mobile hardware)</li>
+		</ul>
 
-	Education
-	Associate of Science (AS), Santa Clara, CA, CA
-	Computer Network Technology, Mission College, Santa Clara, CA
+		<h4>Texas Instruments</h4>
+		<ul>
+			<li>San Jose, canvas</li>
+			<li>January 1995 – September 2001</li>
+			<li>System Administrator (Systems Administration of Windows 98 & NT 4.0)</li>
+		</ul>
 
+		<h3>Education</h3>
+		<ul>
+			<li>Associate of Science (AS)</li>
+			<li>Santa Clara, CA</li>
+			<li>Computer Network Technology, Mission College, Santa Clara, CA</li>
+		</ul>
 
-	Certifications
-	Linux System Administrator Certificate of Proficiency
-	Mission College, Santa Clara, CA, 2015
+		<h3>Certifications</h3>
+		<h4>Linux System Administrator Certificate of Proficiency</h4>
+		<ul>
+			<li>Mission College</li>
+			<li>Santa Clara, CA</li>
+		</ul>
 
-	Certificate of Course Completion of Cisco Networking Academy CCNA
-	Mission College, Santa Clara, CA, 2009
+		<h4>Certificate of Course Completion of Cisco Networking Academy CCNA</h4>
+		<ul>
+			<li>Mission College</li>
+			<li>Santa Clara, CA</li>
+		</ul>
+	</div>
+</div>
 
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
