--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Demo</title>
+	<title>Sean Morrison</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container">
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html"><i class="fas fa-thumbs-up"></i></a>
+			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html"><i class="fas fa-home"></i></a></li>
+					<li><a href="#"><i class="fas fa-coffee"></i></a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="https://www.linkedin.com/in/theseanmorrison/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+					<li><a href="https://www.facebook.com/seanmorrison" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href="https://twitter.com/SeanMorrison" target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://www.instagram.com/morrisonsean/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
+	<div class="jumbotron">
 	<div class="jumbotron">
 	<h1 class="display-3">Sean Morrison</h1>
-	<p class="lead">Hello people who are visiting. Building out my first page. Thanks for visiting and keep checking back for more fun and excitement.</p>
+	<p class="lead">System Administrator, IT Support, Desktop Support, Front-End Web Developer</p>
 	<hr class="my-4">
-	<p>I am currently learning HTML5, CSS3, JavaScript and more. Mainly front-end Web Development for now and hopefully more in the near future.</p>
+	<p>Hey there, how are you? I'm Sean. For many years I've been an IT Administrator. Now I'm also an aspiring Web Developer. I've been an IT Administrator for many years but these days I'm trying to work my way over towards development. Mainly FEND for now and hopefully more in the near future. Hopefully I'll grow into learning full stack development. So far I'm having fun learning HTML5, CSS3, jQuery, Git, BootStrap, and JavaScript. Although I have also been dabbling in Cloud9 on AWS with some backend tools such as MongoDB, JSON, Node.js, npm and more. Take a look at my resume to learn more...</p>
 	<p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="resume.html" target="_blank" role="button">Learn more</a>
   </p>
 </div>
 </div>
