--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<div class="container">
-			<h2>IT Administrator</h2>
+			<h2>System Administrator</h2>
 			<h3>Improve Business Operations through Creative Application of Technology and Resourceful, Service-minded Support</h3>
 			<p>
 				System Administrator and IT Support Specialist. Expertise includes IT administration, desktop support, web development and troubleshooting. Detail focused and trusted with providing technical support to all employees for all systems, network and web related items. Self-starter, creative thinker, decisive, organized and excellent communicator.
