--- a/resume.html
+++ b/resume.html
@@ -16,18 +16,17 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<a class="navbar-brand" href="index.html"><i class="fas fa-thumbs-up"></i></a>
-					<li><a href="index.html"><i class="fas fa-home"></i></a></li>
-					<li><a href="#"><i class="fas fa-coffee"></i></a></li>
+
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
+					<li><a href="index.html"><i class="fas fa-home"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/theseanmorrison/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
 					<li><a href="https://www.facebook.com/seanmorrison" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 					<li><a href="https://twitter.com/SeanMorrison" target="_blank"><i class="fab fa-twitter"></i></a></li>
 					<li><a href="https://www.instagram.com/morrisonsean/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
+			</div>
+		</div>
 	</nav>
 
 	<div class="jumbotron">
