--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
 			<ul>
 				<li>Burlingame, CA</li>
 				<li>April 2017 - Present</li>
-				<li>Infrastructure Support Specialist</li>
+				<li>System Administrator</li>
 				<li>Provide general IT support and Helpdesk for global textile business.</li>
 				<li>
 					Support systems/network infrastructure including: Windows and Mac, Office 365, Microsoft Exchange, SharePoint Online, Windows Server, printers, remote access, VPN, iOS, Android, LifeSize Cloud and Skype for Business Telepresence, JIRA ticket tracking, software and hardware.
@@ -65,7 +65,7 @@
 			<ul>
 				<li>Sunnyvale, CA</li>
 				<li>July 2005 – March 2017</li>
-				<li>Senior System Administrator</li>
+				<li>System Administrator</li>
 				<li>
 					Hired as 5th employee as Senior System Administrator at new startup. Designed, built, and administered mixed-server, multi-user, computer infrastructure (Windows / Linux). Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
 				</li>
