--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Acme|Anton|Lobster|Open+Sans:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 
-<div class="container">
+<div class="container .openSans">
 
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
@@ -31,111 +33,148 @@
 
 	<div class="jumbotron">
 
-		<div class="container">
-			<h1>Sean Morrison</h1>
-			<p>San Jose, CA</p>
+		<div class="container text-center">
+			<h1 class="main-title" style="color: white">Sean Morrison</h1>
+			<h2>System Administrator & IT Support Specialist</h2>
+			<p>San Jose, California</p>
 		</div>
 
 		<div class="container">
-			<h2>System Administrator</h2>
-			<h3>Improve Business Operations through Creative Application of Technology and Resourceful, Service-minded Support</h3>
+			<img class="headshot" src="sean.jpg" alt="Sean Morrison" align="right" width="320px">
+			<h3>Improving Business Operations through Friendly Customer Service, Resourcefulness, Logical Thinking and Creative Application of Technology.</h3>
 			<p>
-				System Administrator and IT Support Specialist. Expertise includes IT administration, desktop support, web development and troubleshooting. Detail focused and trusted with providing technical support to all employees for all systems, network and web related items. Self-starter, creative thinker, decisive, organized and excellent communicator.
+				System Administrator and IT Support Specialist with 20+ years of experience. Strong logical thinker and advanced troubleshooting skills. Extraordinary customer service skills. Great teammate, organized and excellent communicator with emphasis on quality.
 			</p>
 		</div>
 
-		<h3>Technical Skills</h3>
-		<p>
-			Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
-		</p>
+		<div class="container">
+			<h3 class="text-center">TECHNICAL SKILLS</h3>
+			<p>
+				Customer Service, Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
+			</p>
+		</div>
 
-		<h3>Professional Experience</h3>
-			<h4>Standard Fiber</h4>
-			<ul>
-				<li>Burlingame, CA</li>
-				<li>April 2017 - Present</li>
-				<li>System Administrator</li>
-				<li>Provide general IT support and Helpdesk for global textile business.</li>
-				<li>
-					Support systems/network infrastructure including: Windows and Mac, Office 365, Microsoft Exchange, SharePoint Online, Windows Server, printers, remote access, VPN, iOS, Android, LifeSize Cloud and Skype for Business Telepresence, JIRA ticket tracking, software and hardware.
-				</li>
-			</ul>
+		<div class="container">
+			<h3 class="text-center">PROFESSIONAL EXPERIENCE</h3>
 
-			<h4>S3C, Inc.</h4>
-			<ul>
-				<li>Sunnyvale, CA</li>
-				<li>July 2005 – March 2017</li>
-				<li>System Administrator</li>
-				<li>
-					Hired as 5th employee as Senior System Administrator at new startup. Designed, built, and administered mixed-server, multi-user, computer infrastructure (Windows / Linux). Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
-				</li>
-				<li>
-					Created Windows Server 2012 R2 Active Directory domain controller infrastructure, providing services, including file sharing, backups, security, remote access, and printing, with 99% uptime.
-				</li>
-				<li>
-					Administered various IT business systems and services such as domain hosting, email, cloud storage, and VPN remote access, enabling increased employee productivity.
-				</li>
-				<li>
-					Designed and developed an improved, modernized company website with more information and social media presence, offering potential clients greater knowledge of company products and services.
-				</li>
-				<li>
-					Photographed and edited photos of business products in Photoshop for use in engineering documents and marketing vehicles including social media and company web site, educating customers and eliminating operational cost of separate marketing department.
-				</li>
-				<li>
-					Enhanced disaster recovery plan and performance through weekly upload of engineering data archive to Google Cloud Platform Storage using Python commands.
-				</li>
-				<li>
-					Installed 5 workstation Red Hat Enterprise Linux network to run Cadence software for ASIC engineering design and layout.
-				</li>
-				<li>
-					Trained employees monthly in multiple areas including network security and system operations, contributing to strong security awareness and no malware related disasters.
-				</li>
-				<li>
-					Reduced software costs by $10k by upgrading all Windows computers to Version 10 during free upgrade period.
-				</li>
-			</ul>
+			<h3 class="job-title">System Administrator</h3>
+			<h4>Standard Fiber, Burlingame, California</h4>
+			<h5>April 2017 - Present</h5>
+			<p>Provide top-notch Systems Administration and IT support service of Windows and Mac for both on-site and remote users at global textile business.</p>
+				<ul>
+					<li>
+						<p>Perform user account management via Active Directory.</p>
+					</li>
+					<li>
+						<p>Create and update IT documentation and knowledge base.</p>
+					</li>
+					<li>
+						<p>Assist in supporting teleconference systems such as LifeSize Cloud and Skype for Business</p>
+					</li>
+					<li>
+						<p>Migrate Exchange 2007 mailboxes to Office 365.</p>
+					</li>
+					<li>
+						<p>Create SharePoint Online company sites.</p>
+					</li>
+				</ul>
 
-		<h3>Additional Related Experience</h3>
-		<h4>Sandis Humber Jones</h4>
-		<ul>
-			<li>Mountain View, CA</li>
-			<li>Mountain View, CA</li>
-			<li>System Administrator (Systems Administration of Windows XP & Server 2003)</li>
-		</ul>
+				<h3 class="job-title">System Administrator</h3>
+				<h4>S3C, Inc., Sunnyvale, California</h4>
+				<h5>July 2005 – March 2017</h5>
+				<p>System Administrator of small startup. Designed, built, and administered Windows and Linux computer infrastructure. Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.</p>
+				<ul>
+					<li>
+						<p>Created Windows Server 2012 R2 Active Directory domain controller infrastructure, providing services, including file sharing, backups, security, remote access, and printing, with 99% uptime.</p>
+					</li>
+					<li>
+						<p>Administered various IT business systems and services such as domain hosting, email, cloud storage, and VPN remote access, enabling increased employee productivity.</p>
+					</li>
+					<li>
+						<p>Designed and developed an improved, modernized company website with more information and social media presence, offering potential clients greater knowledge of company products and services.</p>
+					</li>
+					<li>
+						<p>Photographed and edited photos of business products in Photoshop for use in engineering documents and marketing vehicles including social media and company web site, educating customers and eliminating operational cost of separate marketing department.</p>
+					</li>
+					<li>
+						<p>Enhanced disaster recovery plan and performance through weekly upload of engineering data archive to Google Cloud Platform Storage using Python commands.</p>
+					</li>
+					<li>
+						<p>Installed 5 workstation Red Hat Enterprise Linux network to run Cadence software for ASIC engineering design and layout.</p>
+					</li>
+					<li>
+						<p>Trained employees monthly in multiple areas including network security and system operations, contributing to strong security awareness and no malware related disasters.</p>
+					</li>
+					<li>
+						<p>Reduced software costs by $10k by upgrading all Windows computers to Version 10 during free upgrade period.</p>
+					</li>
+				</ul>
 
-		<h4>AT&T Wireless</h4>
-		<ul>
-			<li>Mountain View, CA</li>
-			<li>February 2002 – June 2003</li>
-			<li>Communications Specialist (Retail sales with mobile carriers of GSM/GPRS mobile hardware)</li>
-		</ul>
+				<h3 class="job-title">System Administrator</h3>
+				<h4>Sandis Humber Jones, Mountain View, California</h4>
+				<h5>July 2003 – July 2005</h5>
+				<p>Provided systems and network administration and desktop support to 3 sites in Bay Area for medium-sized civil engineering company. Traveled between sites to upgrade systems, resolve issues, install new hardware / software, provide technical support to all end users, and proactively ensure all computer systems were always running.</p>
+				<ul>
+					<li>
+						<p>Managed 8 Windows Server 2000, Active Directory, domain controllers, other network servers, and over 100 Windows XP clients running AutoCAD.</p>
+					</li>
+					<li>
+						<p>Upgraded all computers at all sites from Windows 98 to Windows XP Pro, improving security and software compatibility.</p>
+					</li>
+					<li>
+						<p>Recovered malware-infected, business network at all 3 sites by moving email services from internal Exchange server to outside hosted service and then formatting and installing each computer 1-by-1 to more secure and clean state.</p>
+					</li>
+					<li>
+						<p>Created internal website containing resources and information that employees used to improve productivity, such as procedural documents, employee contact list, and links to commonly used web sites.</p>
+					</li>
+					<li>
+						<p>Redesigned company web site, enhancing professional presence on the Internet.</p>
+					</li>
+					<li>
+						<p>Maintained AutoCAD software and licensing for civil engineering group which ensured that there was no interruption in access for the engineers.</p>
+					</li>
+				</ul>
 
-		<h4>Texas Instruments</h4>
-		<ul>
-			<li>San Jose, canvas</li>
-			<li>January 1995 – September 2001</li>
-			<li>System Administrator (Systems Administration of Windows 98 & NT 4.0)</li>
-		</ul>
 
-		<h3>Education</h3>
-		<ul>
-			<li>Associate of Science (AS)</li>
-			<li>Santa Clara, CA</li>
-			<li>Computer Network Technology, Mission College, Santa Clara, CA</li>
-		</ul>
+				<h3 class="job-title">Communications Specialist</h3>
+				<h4>AT&T Wireless, Santa Clara, California</h4>
+				<h5>January 2002 – July 2003</h5>
+				<p>Retail sales with mobile carriers of GSM/GPRS mobile hardware</p>
+				<ul>
+					<li>
+						<p>Customer service focused and provide technical support for all customers regarding mobile GSM/GPRS hardware, accounts and plans. </p>
+					</li>
+					<li>
+						<p>Build relationships with people by qualifying their needs and making sure they have what they need and proactively following up with them over time.</p>
+					</li>
+					<li>
+						<p>Manage and maintain enterprise business accounts for small and medium sized businesses and corporations.</p>
+					</li>
+					<li>
+						<p>Consistently improve customer satisfaction through expert resolution of conflicts, issues and concerns.</p>
+					</li>
+				</ul>
 
-		<h3>Certifications</h3>
-		<h4>Linux System Administrator Certificate of Proficiency</h4>
-		<ul>
-			<li>Mission College</li>
-			<li>Santa Clara, CA</li>
-		</ul>
+				<h3 class="job-title">System Administrator</h3>
+				<h4>Texas Instruments, San Jose, CA</h4>
+				<h5>January 1995 – September 2001</h5>
+				<p>Systems Administration of Windows 98 & NT 4.0</p>
+		</div>
 
-		<h4>Certificate of Course Completion of Cisco Networking Academy CCNA</h4>
-		<ul>
-			<li>Mission College</li>
-			<li>Santa Clara, CA</li>
-		</ul>
+		<div class="container">
+			<h3 class="text-center">EDUCATION</h3>
+			<h3>Associate of Science</h3>
+			<p><span class="job-title">Computer Networking Technology</span>, Mission College, Santa Clara, CA, 2015</p>
+
+			<h3>Cisco Course Completion</h3>
+			<p><span class="job-title">CCNA Courses</span>, Mission College, Santa Clara, CA, 2009</p>
+
+			<h3>Sun Certified System Administrator</h3>
+			<p><span class="job-title">Sun Solaris 9</span>, Mission College, Santa Clara, CA, 2007</p>
+
+			<h3>Certificate of Proficiency</h3>
+			<p><span class="job-title">Linux System Administration</span>, Mission College, Santa Clara, CA, 2007</p>
+		</div>
 	</div>
 </div>
 
