--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 	<div class="jumbotron">
 
 		<div class="container text-center">
-			<h1 class="main-title" style="color: white">Sean Morrison</h1>
+			<h1 class="main-title" style="color: tomato">Sean Morrison</h1>
 			<h2>System Administrator & IT Support Specialist</h2>
 			<p>San Jose, California</p>
 		</div>
@@ -48,14 +48,14 @@
 		</div>
 
 		<div class="container">
-			<h3 class="text-center">TECHNICAL SKILLS</h3>
+			<h2 class="text-center section-title">TECHNICAL SKILLS</h2>
 			<p>
 				Customer Service, Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
 			</p>
 		</div>
 
 		<div class="container">
-			<h3 class="text-center">PROFESSIONAL EXPERIENCE</h3>
+			<h2 class="text-center section-title">PROFESSIONAL EXPERIENCE</h2>
 
 			<h3 class="job-title">System Administrator</h3>
 			<h4>Standard Fiber, Burlingame, California</h4>
@@ -162,7 +162,7 @@
 		</div>
 
 		<div class="container">
-			<h3 class="text-center">EDUCATION</h3>
+			<h2 class="text-center section-title">EDUCATION</h2>
 			<h3>Associate of Science</h3>
 			<p><span class="job-title">Computer Networking Technology</span>, Mission College, Santa Clara, CA, 2015</p>
 
