--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
 		</div>
 
 		<div class="container">
-			<img class="headshot" src="sean.jpg" alt="Sean Morrison" align="right">
+			<img class="headshot" src="sean.jpg" alt="Sean Morrison" align="left">
 			<h3>Improving Business Operations through Friendly Customer Service, Resourcefulness, Logical Thinking and Creative Application of Technology.</h3>
 			<p>
 				System Administrator and IT Support Specialist with 20+ years of experience. Strong logical thinker and advanced troubleshooting skills. Extraordinary customer service skills. Great teammate, organized and excellent communicator with emphasis on quality.
