--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
 						<p>Create and update IT documentation and knowledge base.</p>
 					</li>
 					<li>
-						<p>Assist in supporting teleconference systems such as LifeSize Cloud and Skype for Business</p>
+						<p>Assist in supporting teleconference systems such as LifeSize Cloud and Skype for Business.</p>
 					</li>
 					<li>
 						<p>Migrate Exchange 2007 mailboxes to Office 365.</p>
