--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Acme|Anton|Lobster|Open+Sans:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
 		</div>
 
 		<div class="container">
-			<img class="headshot" src="sean.jpg" alt="Sean Morrison" align="left">
+			<img class="headshot" src="img/sean.jpg" alt="Sean Morrison" align="left">
 			<h3>Improving Business Operations through Friendly Customer Service, Resourcefulness, Logical Thinking and Creative Application of Technology.</h3>
 			<p>
 				System Administrator and IT Support Specialist with 20+ years of experience. Strong logical thinker and advanced troubleshooting skills. Extraordinary customer service skills. Great teammate, organized and excellent communicator with emphasis on quality.
