--- a/resume.html
+++ b/resume.html
@@ -57,10 +57,10 @@
 		<div class="container">
 			<h2 class="text-center section-title">PROFESSIONAL EXPERIENCE</h2>
 
-			<h3 class="job-title">System Administrator</h3>
+			<h3 class="job-title">IT Support Specialist</h3>
 			<h4>Standard Fiber, Burlingame, California</h4>
 			<h5>April 2017 - Present</h5>
-			<p>Provide top-notch Systems Administration and IT support service of Windows and Mac for both on-site and remote users at global textile business.</p>
+			<p>Provide top-notch IT support service of Windows and Mac for both on-site and remote users at global textile business.</p>
 				<ul>
 					<li>
 						<p>Perform user account management via Active Directory.</p>
