--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
 	</nav>
 
 	<div class="jumbotron">
-	<div class="jumbotron">
-	<h1 class="display-3">Sean Morrison</h1>
-	<p class="lead">IT Administrator, Front-End Web Developer</p>
-	<hr class="my-4">
-	<p>Hey there, how are you? I'm Sean. For many years I've been an IT Administrator. Now I'm also an aspiring Web Developer. I've been an IT Administrator for many years but these days I'm trying to work my way over towards web development. Mainly FEND for now and hopefully more in the near future. Hopefully I'll grow into learning full stack development. So far I'm having fun learning HTML5, CSS3, jQuery, Git, BootStrap, and JavaScript. Although I have also been dabbling in Cloud9 on AWS with some backend tools such as MongoDB, JSON, Node.js, npm and more. Take a look at my resume to learn more...</p>
-	<p class="lead">
-    <a class="btn btn-primary btn-lg" href="resume.html" target="_blank" role="button">Learn more</a>
-  </p>
-</div>
-</div>
+		<h1 class="display-3">TechSnazzy, LLC</h1>
+		<p class="lead">Sean Morrison, Information Technology Consultant</p>
+		<hr class="my-4">
+		<p class="lead">
+			<a class="btn btn-primary btn-lg" href="#" target="_blank" role="button">Learn more</a>
+		</p>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<p>&copy;2018 TechSnazzy, LLC</p>
+		</div>
+	</div>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
