--- a/index.html
+++ b/index.html
@@ -1,51 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sean Morrison</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-	<link rel="stylesheet" href="css/styles.css">
-	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <title>TechSnazzy, LLC</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  .navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+    background-color: #3876b2;
+    color: #FFF;
+    padding: 1% 0;
+    font-size: 1.2em;
+    border: 0;
+  }
+  .navbar-brand {
+    float: left;
+    min-height: 55px;
+    padding: 0 15px 5px;
+  }
+  .navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
+    color: #FFF;
+    background-color: #3876b2;
+  }
+  .navbar-inverse .navbar-nav li a {
+    color: #D5D5D5;
+  }
+  .carousel-caption {
+    top: 50%;
+    transform: translateY(-50%);
+    text-transform: uppercase;
+  }
+  .btn {
+    font-size: 18px;
+    color: #FFF;
+    padding: 12px 22px;
+    background-color: #3876b2;
+    border: 2px solid #FFF;
+  }
+  .container {
+    margin: 4% auto;
+  }
+  #icon {
+    max-width: 200px;
+    margin: 1% auto;
+  }
+  footer {
+    width: 100%;
+    background-color: #3876b2;
+    padding: 5%;
+    color: #FFF;
+  }
+  .fa {
+    padding: 15px;
+    font-size: 25px;
+    color: #FFF;
+  }
+  .fa:hover {
+    color: #D5D5D5;
+    text-decoration: none;
+  }
+
+  @media (max-width: 900px) {
+    .fa {
+      font-size: 20px;
+      padding: 10px;
+    }
+  }
+  @media (max-width: 600px) {
+    .carousel-caption {
+      display: none;
+    }
+    #icon {
+      max-width: 150px;
+    }
+    h2 {
+      font-size: 1.7em;
+    }
+  }
+
+  </style>
 </head>
 <body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-theme" href="#"><img src="img/logo.png"></a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-<div class="container">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="img/face.png">
+        <div class="carousel-caption">
+          <h1>get to know bootstrap</h1>
+          <br>
+          <button type="button" class="btn btn-default">Get Started</button>
+        </div>
+      </div> <!-- End Active -->
+      <div class="item">
+        <img src="img/sf.png">
+      </div>
+      <div class="item">
+        <img src="img/macy.png">
+      </div>
+    </div>
+    <!-- Start Slider Controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div> <!-- End Slider -->
 
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
+  <div class="container text-center">
+    <h2>I work with all operating systems</h2>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="img/ms.png" id="icon">
+        <h4>Microsoft</h4>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/apple.png" id="icon">
+        <h4>Apple</h4>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/tux.png" id="icon">
+        <h4>Linux</h4>
+      </div>
+    </div>
+  </div>
 
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html"><i class="fas fa-home"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/theseanmorrison/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-					<li><a href="https://www.facebook.com/seanmorrison" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-					<li><a href="https://twitter.com/SeanMorrison" target="_blank"><i class="fab fa-twitter"></i></a></li>
-					<li><a href="https://www.instagram.com/morrisonsean/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h4>System Administrator & IT Support Specialist</h4>
+        <p>
+          IT Support Specialist with 20+ years of experience. Strong logical thinker and advanced troubleshooting skills. Extraordinary customer service skills. Great teammate, organized and excellent communicator with emphasis on quality.
+        </p>
+        <h4>Technical Skills</h4>
+        <p>
+          Customer Service, Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
+        </p>
+      </div>
+      <div class="col-md-6">
+        <img src="img/tech.png" class="img-responsive">
+      </div>
+    </div>
+  </div>
 
-	<div class="jumbotron">
-		<h1 class="display-3">TechSnazzy, LLC</h1>
-		<p class="lead">Sean Morrison, Information Technology Consultant</p>
-		<hr class="my-4">
-		<p class="lead">
-			<a class="btn btn-primary btn-lg" href="#" target="_blank" role="button">Learn more</a>
-		</p>
-	</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <h4>I do it all...</h4>
+        <p>
+          Providing top-notch IT support service for Windows, Mac and Linux.
+        </p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <img src="img/code.png" class="img-responsive">
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <h4>And more!</h4>
+        <p>
+          Improving Business Operations through Friendly Customer Service, Resourcefulness, Logical Thinking and Creative Application of Technology
+        </p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <img src="img/laptop.png" class="img-responsive">
+      </div>
+    </div>
+  </div>
 
-	<div class="container">
-		<div class="row">
-			<p>&copy;2018 TechSnazzy, LLC</p>
-		</div>
-	</div>
+  <div class="container">
+    <div class="row">
+      <h4><a href="#hidden" data-toggle="collapse">Care to learn more about me?</a></h4>
+      <div id="hidden" class="collapse">
+        <h4>Some more stuff I've done...</h4>
+        <p>
+          I was a System Administrator of a small startup. I designed, built, and administered Windows and Linux computer infrastructure. Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
+        </p>
+        <p>
+          Also provided systems and network administration and desktop support to 3 sites in Bay Area for medium-sized civil engineering company. Traveled between sites to upgrade systems, resolve issues, install new hardware / software, provide technical support to all end users, and proactively ensure all computer systems were always running.
+        </p>
+      </div>
+    </div>
+  </div>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <footer class="container-fluid text-center">
+    <div class="row">
+      <div class="col-sm-4">
+        <h3>Contact Us</h3>
+        <br>
+        <h4>San Jose, CA</h4>
+      </div>
+      <div class="col-sm-4">
+        <h3>Connect</h3>
+        <a href="https://www.facebook.com/seanmorrison" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/SeanMorrison" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/morrisonsean/" target="_blank" class="fa fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://www.youtube.com/SeanMorrisonHeyNow" target="_blank" class="fa fa-youtube"></a>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/sean.png" class="icon">
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
