--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="item active">
         <img src="img/face.png">
         <div class="carousel-caption">
-          <h1>get to know bootstrap</h1>
+          <h1>TechSnazzy, LLC</h1>
           <br>
           <button type="button" class="btn btn-default">Get Started</button>
         </div>
