--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@
         <p>
           IT Support Specialist with 20+ years of experience. Strong logical thinker and advanced troubleshooting skills. Extraordinary customer service skills. Great teammate, organized and excellent communicator with emphasis on quality.
         </p>
-        <h4>Technical Skills</h4>
         <p>
-          Customer Service, Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
+          I'm pretty good with,... Customer Service, Windows, Linux, Mac, Desktop, Server, Active Directory, HTML, CSS, JavaScript, Python, AWS, WordPress, VMWare, VirtualBox, LifeSize Cloud, Exchange, Office 365, SharePoint Online, Jira, TCP, UDP, DNS, HTTP, IPv4, IPv6, VPN, system and network administration, desktop support, web design and content creation.
         </p>
       </div>
       <div class="col-md-6">
