--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div> <!-- End Slider -->
 
   <div class="container text-center">
-    <h2>I work with all operating systems</h2>
+    <h2>I work well with...</h2>
     <div class="row">
       <div class="col-sm-4">
         <img src="img/ms.png" id="icon">
