--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
+
+    <!-- Slider Photos -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img src="img/face.png">
@@ -122,14 +124,18 @@
           <br>
           <button type="button" class="btn btn-default">Get Started</button>
         </div>
-      </div> <!-- End Active -->
+      </div>
       <div class="item">
         <img src="img/sf.png">
       </div>
       <div class="item">
         <img src="img/macy.png">
       </div>
+      <div class="item">
+        <img src="img/tech.png">
+      </div>
     </div>
+
     <!-- Start Slider Controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -139,7 +145,8 @@
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div> <!-- End Slider -->
+  </div>
+  <!-- End Slider Controls -->
 
   <div class="container text-center">
     <h2>I work well with...</h2>
