--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div id="hidden" class="collapse">
         <h4>Some more stuff I've done...</h4>
         <p>
-          I was a System Administrator of a small startup. I designed, built, and administered Windows and Linux computer infrastructure. Wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
+          I was a System Administrator of a small startup company. I designed, built, and administered Windows and Linux computer infrastructure. I wrote documentation, trained staff, handled facility needs, designed and developed company website (HTML, CSS, WordPress, Photoshop), and oversaw general IT service. Supported operating systems and applications for all end users.
         </p>
         <p>
           Also provided systems and network administration and desktop support to 3 sites in Bay Area for medium-sized civil engineering company. Traveled between sites to upgrade systems, resolve issues, install new hardware / software, provide technical support to all end users, and proactively ensure all computer systems were always running.
