--- a/FCC/Tribute-Page/index.html
+++ b/FCC/Tribute-Page/index.html
@@ -12,7 +12,7 @@
     <!-- Link my CSS after BS4 -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Tribute Page</title>
+    <title>Tribute Page - Lord Darth Vader</title>
   </head>
   <body>
 
