--- a/FCC/Tribute-Page/index.html
+++ b/FCC/Tribute-Page/index.html
@@ -36,7 +36,7 @@
 
             <!-- Timeline of accomplishments. -->
             <div class="col-lg-8 mx-auto">
-              <h3>Darth Vader has appeared in these famous films.</h3>
+              <h3>Darth Vader has appeared in these famous films:</h3>
               <ul>
                 <li><strong>May 25, 1977</strong> - Star Wars: Episode IV – A New Hope</li>
                 <li><strong>May 17, 1980</strong> - Star Wars: Episode V – The Empire Strikes Back</li>
@@ -62,7 +62,7 @@
       <!-- Footer. -->
       <footer class="text-center">
         <hr>
-        <p>Written and code by <a href="https://twitter.com/seanmorrison" target="_blank">Sean Morrison</a>.</p>
+        <p>Written and coded by <a href="https://twitter.com/seanmorrison" target="_blank">Sean Morrison</a>.</p>
       </footer>
 
     </div>
