--- a/FCC/Stanford-Hiking/index.html
+++ b/FCC/Stanford-Hiking/index.html
@@ -21,7 +21,7 @@
       <div class="container">
 
         <div class="row">
-          <h1 class="display-4">Sean and Stephanie Go Hiking!</h1>
+          <h1 class="display-4">Sean and Stephanie Go Hiking at the Stanford Dish!</h1>
           <div class="img-thumbnail">
             <img src="img/dish.jpg" class="img-fluid" alt="Stanford Dish">
             <caption>View of Stanford Dish trail area.</caption>
