--- a/FCC/Stanford-Hiking/index.html
+++ b/FCC/Stanford-Hiking/index.html
@@ -13,7 +13,7 @@
     <!-- Link my CSS after BS4 -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Test Page</title>
+    <title>Sean & Stephanie Go Hiking at the Stanford Dish!</title>
 
   </head>
   <body>
@@ -22,7 +22,7 @@
       <div class="container">
 
         <div class="row">
-          <h1 class="display-4">Sean and Stephanie Go Hiking at the Stanford Dish!</h1>
+          <h1 class="display-4">Sean & Stephanie Go Hiking at the Stanford Dish!</h1>
           <div class="img-thumbnail">
             <img src="img/dish.jpg" class="img-fluid" alt="Stanford Dish">
             <caption>View of Stanford Dish trail area.</caption>
