--- a/FCC/Tribute-Page/index.html
+++ b/FCC/Tribute-Page/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:image" content="img/dv.jpg" />
 
     <!-- Load Bootstrap 4 CSS CDN before any other style sheets on the page. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
