--- a/FCC/Sean-Portfolio/index.html
+++ b/FCC/Sean-Portfolio/index.html
@@ -12,10 +12,14 @@
         <!-- Link my CSS after BS4 -->
         <link rel="stylesheet" href="css/styles.css">
 
-        <title>Template Page</title>
+        <title>Sean's Portfolio Page</title>
     </head>
     <body>
-    
+
+      <div class="container">
+        See how easy that was?
+      </div>
+
 
 
         <!-- Place the Bootstrap 4 JS CDN at the end just before the closing body tag.
