--- a/FCC/Sean-Portfolio/index.html
+++ b/FCC/Sean-Portfolio/index.html
@@ -16,8 +16,12 @@
     </head>
     <body>
 
-      <div class="container">
-        See how easy that was?
+      <div class="jumbotron">
+        <div class="container">
+          <div class="row">
+            Hello!
+          </div>
+        </div>
       </div>
 
 
