--- a/FCC/Sean-Portfolio/index.html
+++ b/FCC/Sean-Portfolio/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:image" content="img/sean.jpg" />
 
     <!-- Load Bootstrap 4 CSS CDN before any other style sheets on the page. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
